# py-sdk

./: .gitignore  .pre-commit-config.yaml  1_create_wallets.py  2_faucet.py  3_delegate.py  CHANGELOG.md  HACKING.md  LICENSE  MANIFEST.in  Makefile  Not working.ipynb  Pipfile  README.md  README.rst  conftest.py  docgen.sh  pyproject.toml  requirements.txt  run-examples.sh  setup.cfg  setup.py  test.py
.github/: CODEOWNERS
.github/workflows/: lint.yml  notebooks.yml  publish.yml  pytests-0.4.0.yml  pytests-V0.3.0.yml  pytests-V0.4.0.yml  pytests-V0.4.1.yml  pytests-chain.yml  pytests-chainV-0.41.yml  pytests-chaosnet.yml  pytests.yml  release.yml  scripts.yml  testnet-notebook.yml
compatibility-tests/: README.md  run.sh  tests.py  unit_tests.py
data/config/: config.toml
docs/: requirements.txt
docs-md/: event_specs.md  exceptions.md  grpc_client.md  index.md  network.md  sdk.md  transaction.md  tx.md  utils.md  wallet.md  websocket.md
docs-md/crypto/: index.md  ripemd160.md
docs-md/jsonrpc/: index.md  jsonrpc.md  jsonrpc_test.md  rpc_error.md
docs-md/msg/: bank.md  dex.md  index.md  msg.md  perp.md  pricefeed.md  spot.md  staking.md
docs-md/pytypes/: common.md  event.md  index.md  jsonable.md  network.md  tx_resp.md
docs-md/query_clients/: auth.md  dex.md  epoch.md  index.md  perp.md  pricefeed.md  spot.md  stablecoin.md  staking.md  util.md  vpool.md
docs-md/tmrpc/: broadcast_test.md
docs/source/: api.rst  conf.py  constants.rst  dex.rst  general.rst  index.rst  modules.rst  nibiru.clients.rst  nibiru.composers.rst  nibiru.msg.rst  nibiru.proto.rst  nibiru.query_clients.rst  nibiru.rst  nibiru.sdks.rst  nibiru.sdks.tx.rst  overview.rst  perpetual.rst  spot.rst
examples/: 1- Connect to nibiru py and query.ipynb  1_quick_start.ipynb  2- My first transaction.ipynb  2_bank.ipynb  3- Arbitrage.ipynb  3- Multi transaction.ipynb  3_perp.ipynb  4- Arbitrage.ipynb  4_spot.ipynb  5_staking.ipynb  README.md  SendToCosmos.py  colab_notebook.ipynb  collab_notebook.ipynb
examples/chain_client/: 0_LocalOrderHash.py  10_MsgBatchCancelDerivativeOrders.py  11_MsgBatchCreateSpotLimitOrders.py  12_MsgBatchCreateDerivativeLimitOrders.py  13_MsgIncreasePositionMargin.py  15_MsgWithdraw.py  16_MsgSubaccountTransfer.py  17_MsgBatchUpdateOrders.py  18_MsgBid.py  19_MsgGrant.py  1_MsgSend.py  20_MsgExec.py  21_MsgRevoke.py  22_MsgSendToEth.py  23_MsgRelayPriceFeedPrice.py  24_MsgRegisterAsDMM.py  25_MsgDelegate.py  26_MsgWithdrawDelegatorReward.py  27_Grants.py  28_BankBalances.py  29_BankBalance.py  2_MsgDeposit.py  30_ExternalTransfer.py  31_MsgCreateBinaryOptionsLimitOrder.py  32_MsgCreateBinaryOptionsMarketOrder.py  33_MsgCancelBinaryOptionsOrder.py  34_MsgAdminUpdateBinaryOptionsMarket.py  35_MsgInstantBinaryOptionsMarketLaunch.py  36_MsgRelayProviderPrices.py  3_MsgCreateSpotLimitOrder.py  4_MsgCreateSpotMarketOrder.py  5_MsgCancelSpotOrder.py  6_MsgCreateDerivativeLimitOrder.py  7_MsgCreateDerivativeMarketOrder.py  8_MsgCancelDerivativeOrder.py  9_MsgBatchCancelSpotOrders.py  msg_delegate.py  msg_exec.py  msg_revoke.py  msg_send.py  (+4 more)
funding-bot/: bot.go  bot_test.go  go.mod  go.sum  grpc.go
nibiru/: __init__.py  chain_client.py  client.py  common.py  composer.py  constant.py  dex_client.py  dex_composer.py  event_specs.py  exceptions.py  fetch_metadata.py  grpc_client.py  network.py  orderhash.py  perp_client.py  perp_composer.py  sdk.py  test_utils.py  transaction.py  tx.py  utils.py  wallet.py  websocket.py
nibiru/clients/: __init__.py  dex.py  dex_client.py  grpc.py  perp.py  perp_client.py  pricefeed.py  util.py  vpool.py
nibiru/composers/: __init__.py  dex.py  dex_composer.py  perp.py  perp_composer.py  pricefeed.py
nibiru/crypto/: ripemd160.py
nibiru/jsonrpc/: __init__.py  jsonrpc.py  jsonrpc_test.py  rpc_error.py
nibiru/msg/: __init__.py  bank.py  dex.py  msg.py  perp.py  pricefeed.py  spot.py  staking.py
nibiru/pytypes/: __init__.py  common.py  event.py  jsonable.py  network.py  tx_resp.py
nibiru/query_clients/: __init__.py  auth.py  dex.py  epoch.py  perp.py  pricefeed.py  rpc_client.py  spot.py  stablecoin.py  staking.py  tx.py  util.py  vpool.py
nibiru/sdks/: __init__.py
nibiru/tm_rpc/: broadcast.py  broadcast_test.py
nibiru/tmrpc/: __init__.py  broadcast.py  broadcast_test.py
nibiru_proto/: __init__.py
nibiru_proto/amino/: amino_pb2.py  amino_pb2.pyi
nibiru_proto/cosmos_proto/: cosmos_pb2.py  cosmos_pb2.pyi
nibiru_proto/gogoproto/: gogo_pb2.py  gogo_pb2.pyi
pysdk/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HACKING.md  event_specs.py  grpc_client.py  sdk.py  service_bot.py  tx.py  wallet.py  websocket.py
pysdk/crypto/: ripemd160.py
pysdk/docs-md/: exceptions.md  index.md  sdk.md
pysdk/examples/: service_bot.py
pysdk/jsonrpc/: __init__.py  jsonrpc.py  jsonrpc_test.py
pysdk/msg/: __init__.py  bank.py  msg.py  perp.py  spot.py  staking.py
pysdk/pysdk/: __init__.py  utils.py
pysdk/pytypes/: __init__.py  common.py  event.py  jsonable.py  network.py  tx_resp.py
pysdk/query_clients/: __init__.py  auth.py  epoch.py  perp.py  spot.py  stablecoin.py  staking.py  util.py
pysdk/scripts/: fmt.sh  localnet.sh  run_pricefeed.sh
pysdk/tests/: __init__.py  (+3 more)
scripts/: docgen.sh  fmt.sh  get_nibid.sh  get_pricefeeder.sh  localnet.sh  pkg_create_inits.py  proto-gen-py.sh  protocgen.sh
tests/: __init__.py  auth_test.py  bank_test.py  broadcast_test.py  chain_info_test.py  common_test.py  conftest.py  dex_test.py  endpoint_test.py  epoch_test.py  error_test.py  event_test.py  jsonrpc_test.py  perp_test.py  pricefeed_test.py  rpc_query_test.py  spot_test.py  stablecoin_test.py  staking_test.py  stories_test.py  util_test.py  utils_test.py  vpool_test.py  websocket_test.py
tests-heavy/: websocket_test.py
(+788 files in other folders)
