[tool.poetry]
name = "nibiru"
version = "0.19.0"
description = "Python SDK for interacting with Nibiru."
authors = ["Nibiru Chain <dev@nibiru.fi>"]
license = "MIT"
maintainers = [
  "NibiruHeisenberg <dev@nibiru.fi>",
  "matthiasmat <dev@nibiru.fi>",
  "onikonychev <dev@nibiru.fi>",
  "Unique-Divine <dev@nibiru.fi>",
]
readme = "README.md" # similar to long_description in setuptools
repository = "https://github.com/NibiruChain/py-sdk"
keywords = ["nibiru", "blockchain", "sdk", "python", "cosmos"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
]
packages = [{ include = "nibiru" }]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
bech32 = "^1.2.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
aiohttp = "^3.8.3"
ecdsa = "^0.18.0"
mnemonic = "^0.20"
hdwallets = "^0.1.2"
aiocron = "^1.8"
pre-commit = "^2.20.0"
shutup = "^0.2.0"
websocket-client = "^1.4.1"
packaging = "^21.3"
nibiru-proto = "==0.19.0"
bip32 = "^3.3"
importlib-metadata = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest-skip-slow = "^0.0.3"
pytest-order = "^1.0.1"
pdoc3 = "^0.10.0"
pytest = "^7.1.3"
black = "^22.10.0"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 88
skip-string-normalization = true
include = '.*\.pyi?$'
target-version = ['py37']
extend-exclude = '''
^/(
    \.vscode
  | nibiru/proto
)$
'''

[tool.isort]
profile = "black"
py_version = 39
skip_glob = ["nibiru/proto/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
